--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -1681,6 +1681,29 @@ ul.meta-nav-top
           display: block; 
           font-weight: normal;
         }
+        div.projectdetailRating{
+          float: right; 
+          width:150px; 
+          z-index: 100
+        }
+        div.projectdtailHeart{
+          float: right; 
+          width:50px;
+          z-index: 100
+        }
+        span.heartproject{
+          position:relative;
+          color:#8e44ad; 
+          font-size: 45px
+        }
+
+        span.heartnumber{
+          z-index: 3;
+          position: absolute; 
+          margin-left:-25px;
+          margin-top:12px;
+          color:white;
+        }
       }
     }
 
