--- a/application/modules/default/views/scripts/explore/index.phtml
+++ b/application/modules/default/views/scripts/explore/index.phtml
@@ -109,8 +109,9 @@ $time_start = microtime(true);
             <?php   }?>
             </div>
 
-            <div  class="supportDiv" >    
-            <span><b><?=$countSupporters?></b> people support <?=$countMembers?></span>        
+             <div  class="supportDiv" >    
+            <span><b><?=$countSupporters?></b> people support </span>        
+            <span style="display: block"><?=$countMembers?> Members</span>
             </div>
 
             <div  class="row sidebar-right-info" >                                
