--- a/application/modules/default/views/scripts/home/index-opendesktop.phtml
+++ b/application/modules/default/views/scripts/home/index-opendesktop.phtml
@@ -25,17 +25,13 @@ $this->comments = $modelInfo->getLatestComments(10);
 $this->users = $modelInfo->getNewActiveMembers(18);
 $this->supporters = $modelInfo->getNewActiveSupporters(18);
 
-// LIVE
 $this->productsThemes = $modelInfo->getLastProductsForHostStores(5,"381,386,107,147,146,151");
 $this->productsApps = $modelInfo->getLastProductsForHostStores(5,233);
 $this->productsAddons = $modelInfo->getLastProductsForHostStores(5,"152,277,384");
 $this->productsWallpapers = $modelInfo->getLastProductsForHostStores(5,295);
 
-// CC TEST
-// $this->productsThemes = $modelInfo->getLastProductsForHostStores(5,"3,33");
-// $this->productsApps = $modelInfo->getLastProductsForHostStores(5,33);
-// $this->productsAddons = $modelInfo->getLastProductsForHostStores(5,7);
-// $this->productsWallpapers = $modelInfo->getLastProductsForHostStores(5,5);
+$countSupporters = $modelInfo->getCountActiveSupporters();
+$countMembers = $modelInfo->getCountMembers();
 
 $helperBuildMemberUrl = new Default_View_Helper_BuildMemberUrl();
 $helperImage = new Default_View_Helper_Image();
@@ -161,7 +157,6 @@ $helpPrintDate = new Default_View_Helper_PrintDate();
 </div>
 <div class="GridFlex-cell sidebar-right">   
         <aside  id="explore-sidebar" >     
-
         <div class="downloadDiv" >
             <a href="https://www.linux-apps.com/p/1175480/" target="_blank"><img src="/images/system/download-app.png" /></a>
         </div>
@@ -175,6 +170,11 @@ $helpPrintDate = new Default_View_Helper_PrintDate();
         <?php   } else if((null != $identity && $this->isSupporter($identity->member_id))) { ?>
             <a href="/support" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true">Support<br>Opendesktop.org</a>
         <?php   }?>
+        </div>
+
+        <div  class="supportDiv" >    
+        <span><b><?=$countSupporters?></b> people support </span>        
+        <span style="display: block"><?=$countMembers?> Members</span>
         </div>
 
         <div  class="row sidebar-right-info" >                                
