--- a/application/modules/default/views/scripts/explore/index.phtml
+++ b/application/modules/default/views/scripts/explore/index.phtml
@@ -111,7 +111,7 @@ $time_start = microtime(true);
 
              <div  class="supportDiv" >    
             <span><b><?=$countSupporters?></b> people support </span>        
-            <span style="display: block"><?=$countMembers?> Members</span>
+            <span style="display: block"><?=number_format($countMembers, 0, '.', ',');?> Members</span>
             </div>
 
             <div  class="row sidebar-right-info" >                                
