--- a/application/modules/default/views/scripts/home/index-opendesktop.phtml
+++ b/application/modules/default/views/scripts/home/index-opendesktop.phtml
@@ -172,7 +172,7 @@ $helpPrintDate = new Default_View_Helper_PrintDate();
         <?php   }?>
         </div>
 
-        <div  class="supportDiv" >    
+        <div  class="supportDiv  withborder" >    
         <span><b><?=$countSupporters?></b> people support </span>        
         <span style="display: block"><?=number_format($countMembers, 0, '.', ',');?> Members</span>
         </div>
