--- a/httpdocs/theme/flatui/less/explore_index.less
+++ b/httpdocs/theme/flatui/less/explore_index.less
@@ -60,6 +60,14 @@
                 display: block;
                 margin-left: auto;
                 margin-right: auto;
+                
+	}
+
+	.withborder{
+		border: 1px solid #ccd4d8 ;
+		padding-top: 10px;	
+		margin-bottom: 10px;
+		
 	}
 	.sidebar-right-info{
 		background-color: #f1f1f1; 
