--- a/application/modules/default/views/scripts/explore/index.phtml
+++ b/application/modules/default/views/scripts/explore/index.phtml
@@ -109,7 +109,7 @@ $time_start = microtime(true);
             <?php   }?>
             </div>
 
-             <div  class="supportDiv" >    
+             <div  class="supportDiv withborder" >    
             <span><b><?=$countSupporters?></b> people support </span>        
             <span style="display: block"><?=number_format($countMembers, 0, '.', ',');?> Members</span>
             </div>
