--- a/application/modules/default/views/scripts/product/index.phtml
+++ b/application/modules/default/views/scripts/product/index.phtml
@@ -197,7 +197,7 @@ if (Zend_Auth::getInstance()->hasIdentity()){
                             <div class="projectdtailHeart">
                                 <div>
                                 <span class="heartproject glyphicon glyphicon-heart"></span>
-                                <span class="heartnumber small"><?=$this->fetchHeartsForProject($this->product->member_id)?></span>
+                                <span class="heartnumber small"><?=$this->fetchHeartsForProject($this->product->project_id)?></span>
                                 </div>
                             
                             </div>
