--- a/application/modules/default/views/scripts/partials/header/template.phtml
+++ b/application/modules/default/views/scripts/partials/header/template.phtml
@@ -93,12 +93,14 @@ echo $this->render('partials/header/metaheader.phtml'); ?>
                                                     <a href="<?= $helperBuildMemberUrl->buildMemberUrl($member->member_id, 'products') ?>"><?= $this->translate('Products') ?></a>
                                                 </li>
                                                 <li class="link">
-                                                    <a href="/settings/"><?= $this->translate('Settings') ?></a>
+                                                    <a href="<?= $helperBuildMemberUrl->buildMemberUrl($member->member_id, 'plings') ?>"><?= $this->translate('Plings') ?></a>
                                                 </li>
                                                 <li class="link">
-                                                    <a href="<?= $helperBuildMemberUrl->buildMemberUrl($member->member_id, 'plings') ?>">
-                                                        <?= $this->translate('Plings') ?>
-                                                    </a>
+                                                    <a href="<?= $helperBuildMemberUrl->buildMemberUrl($member->member_id, 'downloadhistory') ?>"><?= $this->translate('Download History') ?></a>
+                                                </li>
+
+                                                <li class="link">
+                                                    <a href="/settings/"><?= $this->translate('Settings') ?></a>
                                                 </li>
                                                 <li class="link">
                                                     <a href="<?=$serverUrl?>/logout/"><?= $this->translate('Logout') ?></a>
