--- a/application/modules/default/views/scripts/user/downloadhistory.phtml
+++ b/application/modules/default/views/scripts/user/downloadhistory.phtml
@@ -47,9 +47,10 @@ $pageCount = $this->downloadhistory->getTotalItemCount()/$this->downloadhistory-
                 <div class="row">
                     <div class="col-lg-12">
                     <small class="pull-right">
-                        <div class="row" style="margin:0;padding: 0;text-align: right;"><?=$this->downloadhistory->getTotalItemCount()?> Downloads</div>
+                        <div class="row totaldownloads"><?=$this->downloadhistory->getTotalItemCount()?> Downloads</div>
                         <?php if ($pageCount > 1) echo $this->paginationControl($this->downloadhistory, 'Sliding', '/partials/paginationControlBootstrap.phtml',
-                            array('params' => array(), 'dom_target' => 'div#my-downloadshistory-list')); ?></small>                    
+                            array('params' => array(), 'dom_target' => 'div#my-downloadshistory-list')); ?>
+                      </small>                    
                     </div>
                 </div>
 
