--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -5414,6 +5414,11 @@ img.imgpopover
 
     .my-downloadshistory-list{
       width: 1100px;
+      .totaldownloads{
+        margin:0;
+        padding: 20px;
+        text-align: right;
+      }
       .smaller{
         font-size: smaller;
       }
