--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -1697,6 +1697,12 @@ ul.meta-nav-top
           font-size: 45px
         }
 
+        .heartgrey{
+          position:relative;
+          color:#C8C8C8; 
+          font-size: 45px
+        }
+
         span.heartnumber{
           z-index: 3;
           position: absolute; 
@@ -1788,6 +1794,9 @@ ul.meta-nav-top
                 padding: 20px 10px 10px 10px;              
                 article {
                     padding-top: 15px;
+                }
+                article.lastchangelog{
+                    padding-top: 50px;
                 }
               }
             
