--- a/application/modules/default/views/scripts/settings/index.phtml
+++ b/application/modules/default/views/scripts/settings/index.phtml
@@ -66,7 +66,7 @@ $this->tab = 'settings';
                             <li >
                                     <a href="#form-picture-background-panel" data-toggle="tab">
                                  <span class="glyphicon  glyphicon-picture"></span>
-                                            <?= $this->translate('Profile Picture Background') ?>
+                                            <?= $this->translate('Background Picture') ?>
                                     </a>
                             </li> 
                               
