--- a/application/modules/default/views/scripts/home/index-opendesktop.phtml
+++ b/application/modules/default/views/scripts/home/index-opendesktop.phtml
@@ -158,7 +158,7 @@ $helpPrintDate = new Default_View_Helper_PrintDate();
 <div class="GridFlex-cell sidebar-right">   
         <aside  id="explore-sidebar" >     
         <div class="downloadDiv" >
-            <a href="https://www.linux-apps.com/p/1175480/" target="_blank"><img src="/images/system/download-app.png" /></a>
+            <a href="https://www.opendesktop.org/p/1175480/" target="_blank"><img src="/images/system/download-app.png" /></a>
         </div>
 
         <div class="supportDiv" >
