--- a/application/modules/default/views/scripts/explore/index.phtml
+++ b/application/modules/default/views/scripts/explore/index.phtml
@@ -95,7 +95,7 @@ $time_start = microtime(true);
       <div class="GridFlex-cell sidebar-right">
           <aside  id="explore-sidebar <?=$asidehide?>" >                      
             <div class="downloadDiv" >
-                <a href="https://www.linux-apps.com/p/1175480/" target="_blank"><img src="/images/system/download-app.png" /></a>
+                <a href="https://www.opendesktop.org/p/1175480/" target="_blank"><img src="/images/system/download-app.png" /></a>
             </div>
 
             <div class="supportDiv" >
