--- a/application/modules/default/views/scripts/product/search.phtml
+++ b/application/modules/default/views/scripts/product/search.phtml
@@ -82,7 +82,7 @@ $this->headLink()->appendStylesheet('/theme/flatui/css/explore_index.css');
             <div class="GridFlex-cell sidebar-right">
                 <aside  id="explore-sidebar <?=$asidehide?>" >
                     <div class="downloadDiv" >
-                        <a href="https://www.linux-apps.com/p/1175480/" target="_blank"><img src="/images/system/download-app.png" /></a>
+                        <a href="https://www.opendesktop.org/p/1175480/" target="_blank"><img src="/images/system/download-app.png" /></a>
                     </div>
                     
                     <div class="supportDiv" >
