--- a/application/modules/default/views/scripts/home/index-opendesktop.phtml
+++ b/application/modules/default/views/scripts/home/index-opendesktop.phtml
@@ -25,122 +25,18 @@ $this->comments = $modelInfo->getLatestComments(10);
 $this->users = $modelInfo->getNewActiveMembers(18);
 $this->supporters = $modelInfo->getNewActiveSupporters(18);
 
-// LIVE
 $this->productsThemes = $modelInfo->getLastProductsForHostStores(5,"381,386,107,147,146,151");
 $this->productsApps = $modelInfo->getLastProductsForHostStores(5,233);
 $this->productsAddons = $modelInfo->getLastProductsForHostStores(5,"152,277,384");
 $this->productsWallpapers = $modelInfo->getLastProductsForHostStores(5,295);
 
-// CC TEST
-// $this->productsThemes = $modelInfo->getLastProductsForHostStores(5,"3,33");
-// $this->productsApps = $modelInfo->getLastProductsForHostStores(5,33);
-// $this->productsAddons = $modelInfo->getLastProductsForHostStores(5,7);
-// $this->productsWallpapers = $modelInfo->getLastProductsForHostStores(5,5);
+$countSupporters = $modelInfo->getCountActiveSupporters();
+$countMembers = $modelInfo->getCountMembers();
 
-
-$storeCatIds = Zend_Registry::isRegistered('store_category_list') ? Zend_Registry::get('store_category_list') : null;
-$this->categories = $storeCatIds;
-
-$getAuthUser = new Default_View_Helper_GetAuthUser();
 $helperBuildMemberUrl = new Default_View_Helper_BuildMemberUrl();
 $helperImage = new Default_View_Helper_Image();
 $helpPrintDate = new Default_View_Helper_PrintDate();
-
-$auth = Zend_Auth::getInstance();
-$member = $getAuthUser->getAuthUser();
-$this->headLink()->appendStylesheet('/theme/flatui/css/explore_index.css');
-$this->headLink()->appendStylesheet('/theme/flatui/css/startpage.css');
 ?>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
-
-    <header id="page_header" xmlns="http://www.w3.org/1999/html">
-        <div class="container header" style="position: relative;">                     
-              
-                 <?php if (false === $auth->hasIdentity() && empty($member->username)) {
-                     $helperEncryptUrl = new Default_View_Helper_EncryptUrl();
-                     $redirectString = '/login/redirect/'.$helperEncryptUrl->EncryptUrl($_SERVER["REQUEST_URI"]);
-                     ?>
-                     <ul class="menu-nav-tabs absolute-right" >
-                         <li role="presentation" class="<?php echo(strpos($_SERVER["REQUEST_URI"], 'register') ? 'active' : '') ?>">
-                             <a href="/register">Register</a>
-                         </li>
-                         <li role="presentation" class="<?php echo(strpos($_SERVER["REQUEST_URI"], 'login') ? 'active' : '') ?>">
-                             <a href="/login<?=$redirectString?>">Login</a>
-                         </li>
-                     </ul>
-                 <?php } ?>
-            
-        <section class="container">
-            <section class="wrapper">
-                <section>
-                    <figure class="logo-header" >
-                        <a href="/">
-                            <img width="<?=$this->template['header-logo']['width']?>" border="0" src="<?=$this->template['header-logo']['image-src']?>">
-                        </a>
-                    </figure>
-                  
-                    <nav id="nav-top">
-                        <div class="pull-left col-lg-5 col-md-5 col-sm-5 col-xs-5">
-                        </div>
-
-                        <div class="pull-right col-lg-7 col-md-7 col-sm-7 col-xs-7">
-                            <?php if ($auth->hasIdentity() && !empty($member->username)) { ?>
-                                <ul class="menu pull-right">
-                                    <li class="link relative profile-menu-container">
-                                        <a rel="profile-menu" class="menu-trigger">
-                                        <div class="absolute header-profile-image"><img
-                                                src="<?= $helperImage->Image($member->profile_image_url, array('width' => 30, 'height' => 30)) ?>"/>
-                                        </div>
-                                        <span><?= $member->username ?></span>
-                                        </a>
-                                        <ul class="profile-menu menu-dropdown">
-                                            <div class="dropdown-header"></div>
-                                            <li class="link first">
-                                                <a href="/product/add/">
-                                                    <?= $this->translate('Add Product') ?>
-                                                </a>
-                                            </li>
-                                            <li class="link">
-                                                <a href="<?= $helperBuildMemberUrl->buildMemberUrl($member->member_id, 'products') ?>">
-                                                    <?= $this->translate('My Products') ?>
-                                                </a>
-                                            </li>
-                                            
-                                            <li class="link">
-                                                <a href="/settings/">
-                                                    <?= $this->translate('My Settings') ?>
-                                                </a>
-                                            </li>
-                                            <li class="link">
-                                                <a href="<?= $helperBuildMemberUrl->buildMemberUrl($member->member_id, 'plings') ?>">
-                                                    <?= $this->translate('Plings') ?>
-                                                </a>
-                                            </li>
-                                            <li class="link">
-                                                <a href="/logout/">
-                                                    <?= $this->translate('Logout') ?>
-                                                </a>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            <?php } else { ?>
-                            <?php } ?>
-                            <form id="search" class="pull-right" action="/search">
-                                <input type="text" name="projectSearchText" class="content-search">
-
-                                <div class="icon-search-input absolute cursor-hand"
-                                     onclick="$('#search').submit()"></div>
-                            </form>
-                        </div>
-                    </nav>
-                </section>
-
-            </section>
-        </section>            
-        </div>
-    </header>
-
 <main id="explore-content" class="startpage-store" >
 <div class="GridFlex">
 <div class="GridFlex-cell sidebar-left">  
@@ -261,9 +157,8 @@ $this->headLink()->appendStylesheet('/theme/flatui/css/startpage.css');
 </div>
 <div class="GridFlex-cell sidebar-right">   
         <aside  id="explore-sidebar" >     
-
         <div class="downloadDiv" >
-            <a href="https://www.linux-apps.com/p/1175480/" target="_blank"><img src="/images/system/download-app.png" /></a>
+            <a href="https://www.opendesktop.org/p/1175480/" target="_blank"><img src="/images/system/download-app.png" /></a>
         </div>
 
         <div class="supportDiv" >
@@ -277,6 +172,11 @@ $this->headLink()->appendStylesheet('/theme/flatui/css/startpage.css');
         <?php   }?>
         </div>
 
+        <div  class="supportDiv  withborder" >    
+        <span><b><?=$countSupporters?></b> people support </span>        
+        <span style="display: block"><?=number_format($countMembers, 0, '.', ',');?> Members</span>
+        </div>
+
         <div  class="row sidebar-right-info" >                                
             <span class="newsTitle"> News </span>
             <div class="prod-widget-box right bgwhite " id="rss-feeds"> </div>                  
@@ -288,21 +188,15 @@ $this->headLink()->appendStylesheet('/theme/flatui/css/startpage.css');
                     echo $this->render('explore/partials/comment.phtml');
                 }
                 ?>
-            </div>
-
-          
+            </div>          
         </aside>
 </div>
 </div>
 
 </main>
 
-
 <?php $this->inlineScript()->appendScript(
-    '    $(document).ready(function(){
-                MenuHover.setup();                    
-                LoginContainer.update();
-                RssNews.setup();  
-                PlinglistContent.setup();                    
+    '    $(document).ready(function(){                               
+                RssNews.setup();                  
             });
         ');
