--- a/application/modules/default/views/scripts/product/index.phtml
+++ b/application/modules/default/views/scripts/product/index.phtml
@@ -191,9 +191,25 @@ if (Zend_Auth::getInstance()->hasIdentity()){
                                 
                                 </span>
                             </span>
-                            <div style="float: right; width:150px; z-index: 100">
+                          
+                            <div class="projectdtailHeart">
+                                <div> 
+                                    <?php 
+                                        $cntheart = $this->fetchHeartsForProject($this->product->project_id);
+                                        if($cntheart>0){
+                                        ?>                                    
+                                                    <span class="heartproject glyphicon glyphicon-heart"></span>
+                                                    <span class="heartnumber small"><?=$cntheart?></span>
+                                    <?php }else{
+                                                    echo '<i class="fa fa-heart-o heartgrey" aria-hidden="true"></i>';        
+                                        } ?>
+                                </div>                            
+                            </div>
+                            
+                            <div class="projectdetailRating">
                             <?php echo $this->render('partials/sidebarRating.phtml'); ?>
                             </div>
+                            
                         </div>
                         <div id="carouselContainer" class="carouselContainer">
                             <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="false">
@@ -290,17 +306,18 @@ if (Zend_Auth::getInstance()->hasIdentity()){
                                     </article>
 
 
-                                    <article>
+                                    
                                         <?php
                                         if (count($this->updates) > 0) {
                                             $this->productUpdate = $this->updates[0];
                                             ?>
+                                            <article class="lastchangelog">
                                             <b>Last changelog:</b>
 
                                             <?= $this->render('product/partials/productUpdatesV1.phtml'); ?>
-
+                                            </article>
                                         <?php } ?>
-                                    </article>
+                                    
 
                                     <!-- comments -->
                                     <div id="product-discussion">
