--- a/application/modules/default/views/scripts/explore/index.phtml
+++ b/application/modules/default/views/scripts/explore/index.phtml
@@ -109,10 +109,12 @@ $time_start = microtime(true);
             <?php   }?>
             </div>
 
-             <div  class="supportDiv withborder" >    
-            <span><b><?=$countSupporters?></b> people support </span>        
-            <span style="display: block"><?=number_format($countMembers, 0, '.', ',');?> Members</span>
-            </div>
+             <div  class="supportDiv  withborder" >    
+                  <span><b><?=$countSupporters?></b> people support </span>        
+                  <span style="display: block"><?php /*number_format($countMembers, 0, '.', ',');*/?>
+                  those who support freedom
+                   </span>
+                  </div>
 
             <div  class="row sidebar-right-info" >                                
                 <span class="newsTitle"> News </span>
