--- a/application/modules/default/views/scripts/user/aboutme.phtml
+++ b/application/modules/default/views/scripts/user/aboutme.phtml
@@ -87,7 +87,7 @@ $isSupporter = $this->stat['donationIssupporter'];
                                        <span class="cnt"><?=$this->stat['cntComments']?> </span> Comments
                                     </div>
                                     <div class="row">
-                                       Likes <span class="cnt"> <?=$this->stat['cntLikesHeGave']?> </span>Projects
+                                       Likes <span class="cnt"> <?=$this->stat['cntLikesHeGave']?> </span>Products
                                     </div>
                                     <div class="row">
                                        Got <span class="cnt"> <?=$this->stat['cntLikesHeGot']?> </span>Likes <i class="fa fa-heart" style="color:#8e44ad" aria-hidden="true"></i>
